# SLAMStudy

./: yilai.txt
code/MatrixCalculate/: CMakeLists.txt  eigenMatrix.cpp
code/featureORB/: CMakeLists.txt  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp
code/imageOfOpenCV/imageBasics/: CMakeLists.txt
code/imageOfOpenCV/rgbd/: CMakeLists.txt  run.sh
code/useGeometry/: eigenGeometry.cpp
code/useLK/: CMakeLists.txt  useLK.cpp
code/userCeres_G2O/: CMakeLists.txt
notes/: 01_SLAM概述.md  02_三维空间物体运动.md  03_李群和李代数.md
